# supernova

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh_CN.md
cmake/: compiler.cmake  dependencies.cmake  env.cmake  platform.cmake
cmake/toolchains/: apple-clang.cmake  linux-clang.cmake  linux-gcc.cmake  windows-mingw-w64.cmake  windows-msvc.cmake
engine/: CMakeLists.txt
engine/src/: defines.h
engine/src/container/: adarray.cpp  adarray.h  array.c  array.h  darray.cpp  darray.h  ring_buffer.cpp  ring_buffer.h
engine/src/core/: app.c  app.cpp  app.h  asserts.cpp  asserts.h  clock.cpp  clock.h  event.c  event.h  general_allocator.cpp  input.c  input.cpp  input.h  keyboard.h  linear_allocator.cpp  logger.cpp  logger.h  memory.c  memory.cpp  memory.h  mouse.h  pool_allocator.c  pool_allocator.cpp  stack_allocator.cpp
engine/src/platform/: platform.h  platform_linux.c  platform_linux.cpp  platform_win32.cpp
engine/src/platform/console/: linux_console.cpp  macos_console.cpp  windows_console.cpp
engine/src/platform/event/: linux_event.cpp  macos_event.cpp  windows_event.cpp
engine/src/platform/memory/: linux_mem.cpp  macos_mem.cpp  windows_mem.cpp
engine/src/platform/session/: linux_session.cpp  linux_session_internal.h  macos_session.cpp  macos_session_internal.h  windows_session.cpp  windows_session_internal.h
engine/src/platform/time/: linux_time.cpp  macos_time.cpp  windows_time.cpp
engine/src/renderer/: renderer_backend.cpp  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.inl
scripts/: build.py  run.py
testbed/: CMakeLists.txt  build.sh
testbed/src/: main.cpp
